- fix cart error messages not appearing properly - refactor home page featured products, fixes #13 - rename a few classes for consistency - adjust cart item spacing - refactor category dropdown code

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -14,7 +14,7 @@
   .cart-item
     +pie-clearfix
     font-size: 14px
-    height: 190px
+    height: 220px
     line-height: 15px
     padding: 20px 0
     position: relative
@@ -35,7 +35,7 @@
   .item-image-details
     +pie-clearfix
     +vertical-align
-    height: 190px
+    height: 180px
     max-width: 63%
     float: left
     width: 100%
@@ -77,6 +77,9 @@
     color: $primary-color
     display: block
     font-size: 22px
+    
+    @media screen and (max-width: $break-medium)
+      font-size: 20px
       
   .item-details-name
     line-height: 26px
@@ -88,6 +91,17 @@
     font-size: 14px
     line-height: 17px
     margin-top: 6px
+    
+  .item-details-price
+    color: $secondary-color
+    display: none
+    font-family: $secondary-font
+    font-size: 14px
+    line-height: 17px
+    margin-top: 6px
+    
+    @media screen and (max-width: $break-medium)
+      display: block
 
   .item-quantity-holder
     +vertical-align
